changing node app hostname

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "jotdown",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.14.1",
+    "npm": "6.4.1"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "joi-browser": "^13.4.0",
